<resources>
    <string name="app_name">Merry Christmas</string>
    <string name="with_love">From Alex with Love</string>
    <string name="p_text">Christmas brings family and friends together; it helps us appreciate the love in our lives we can often take for granted. May the true meaning of the holiday season fill your heart and home with many blessings my dear friend.</string>
    <string name="wish_edit_header">Write your wish to share!</string>
    <string name="share_wish_btn">View and Share your Wish</string>
    <string name="copyrights">© 2011–2017 Udacity, Inc.</string>
</resources>
