<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">
    <ImageView
        style="@style/BackgroundDefault"
        tools:ignore="ContentDescription"/>

    <com.jetradarmobile.snowfall.SnowfallView
        style="@style/Snow" />

    <ImageView
        style="@style/MerryXmasHeader"
        tools:ignore="ContentDescription"/>

    <RelativeLayout
        style="@style/ContentWrapper" >

        <TextView
            style="@style/Wish_text"
            android:id="@+id/wishes"
            android:text="@string/p_text"
            />
        <TextView
            style="@style/Signature"
            android:text="@string/with_love" />
        <Button
            style="@style/EditTextIcon"
            android:onClick="editTextClick"
            />
    </RelativeLayout>

    <ImageView
        style="@style/LittleSanta"
        tools:ignore="ContentDescription"  />
    <ToggleButton
        style="@style/SoundConfig"
        android:id="@+id/toggleSound" />
    <TextView
        style="@style/CopyrightText"
        android:text="@string/copyrights"/>
</RelativeLayout>
